@@ -1,11 +1,11 @@
 Package: simplejags
-Version: 0.01-6
-Date: 2014-5-9
+Version: 0.01-7
+Date: 2014-5-12
 Title: Run JAGS from R (a wrapper for rjags)
 Author: Ken Kellner <ken@kenkellner.com>
 Maintainer: Ken Kellner <ken@kenkellner.com>
-Depends: R (>= 2.14.0), rjags (>= 3-3)
-Imports: rjags, coda (>= 0.13)
+Depends: R (>= 2.14.0), rjags (>= 3-3), parallel
+Imports: rjags, coda (>= 0.13), parallel
 SystemRequirements: jags (>= 3.3.0)
 Description: This package runs JAGS (Just Another Gibbs Sampler) analyses from within R. It acts as a wrapper and alternative interface for the functions in the rjags package and adds some custom output and graphical options.
 License: GPL (>= 2)
