@@ -1,40 +1,67 @@
 
 print.simplejags <- function(x,digits=3){
+  
+  #bugs.format=TRUE prints a nearly exact replica of WinBUGS-style output
+  
+  #Header
   if(!x$bugs.format){
-  cat('JAGS output for model \'',x$modfile,'\', generated by simplejags.','\n',sep="")
-  cat('Estimates based on',round(x$mcmc.info[[1]],0),'chains of',round(x$mcmc.info[[3]],0),'iterations,') 
-  cat(' burn-in = ',round(x$mcmc.info[[4]],0),' and thin rate = ',round(x$mcmc.info[[5]],0),',','\n',sep="")
-  cat('yielding',round(x$mcmc.info[[6]],0),'total samples from the joint posterior.','\n')
-  cat('MCMC ran for ',x$mcmc.info[[7]],' minutes at time ',paste(x$run.date),'.\n','\n',sep="")
-
-  y = data.frame(unlist(x$mean),unlist(x$sd),unlist(x$q2.5),unlist(x$q50),unlist(x$q97.5),
-                 unlist(x$overlap0),unlist(x$f),unlist(x$Rhat),unlist(x$n.eff)) 
-  row.names(y) = colnames(x$samples[[1]])
-  names(y) = c('mean','sd','2.5%','50%','97.5%','overlap0','f','Rhat','n.eff')
-  if(x$mcmc.info[[1]]==1){
-  y = y[,-c(8,9)]
+    cat('JAGS output for model \'',x$modfile,'\', generated by simplejags.','\n',sep="")
+    cat('Estimates based on',x$mcmc.info$n.chains,'chains of',x$mcmc.info$n.iter,'iterations,') 
+    cat(' burn-in = ',x$mcmc.info$n.burnin,' and thin rate = ',x$mcmc.info$n.thin,',','\n',sep="")
+    cat('yielding',x$mcmc.info$n.samples,'total samples from the joint posterior.','\n')
+    if(!x$parallel){cat('MCMC ran for ',x$mcmc.info$elapsed.mins,' minutes at time ',paste(x$run.date),'.\n','\n',sep="")
+    } else{cat('MCMC ran in parallel for ',x$mcmc.info$elapsed.mins,' minutes at time ',paste(x$run.date),'.\n','\n',sep="")}
+  } else{
+    cat('Inference for Bugs model at \'',x$modfile,'\', fit using JAGS,','\n',sep="")
+    cat(x$mcmc.info$n.chains,'chains, each with',x$mcmc.info$n.iter,'iterations (first ',x$mcmc.info$n.burnin,'discarded), n.thin =',x$mcmc.info$n.thin) 
+    cat('\nn.sims = ',x$mcmc.info$n.iter,'iterations saved','\n')    
   }
-  #get the rounding to look clean, move deviance to bottom
-  z <-  as.data.frame(round(as.matrix(y),digits))
-  z[,6] <- z[,6]==1
+  
+  #Organize columns
+  if(!x$bugs.format){
+    if(x$mcmc.info$n.chains!=1){y = x$summary[,c(1,2,3,5,7,10,11,8,9)]
+    } else {y = x$summary[,c(1,2,3,5,7,8,9)]}
+    z <-  as.data.frame(round(as.matrix(y),digits))
+    z[,6] <- z[,6]==1
+  } else {
+    if(x$mcmc.info$n.chains!=1){y = x$summary[,c(1:9)]
+    } else {y = x$summary[,c(1:7)]}
+    z <- as.data.frame(round(as.matrix(y),digits))
+  }
+  
+  #print the output
   print(z)
   
+  #Print Rhat/n.eff information if necessary
+  if(x$mcmc.info$n.chains>1){
+    if(!x$bugs.format){
+      if(max(unlist(x$Rhat))>1.1){cat('\n**WARNING** Rhat values indicate convergence failure.','\n')
+      }else{cat('\nSuccessful convergence based on Rhat values (all < 1.1).','\n')}
+      cat('Rhat is the potential scale reduction factor (at convergence, Rhat=1).','\n')
+      cat('For each parameter, n.eff is a crude measure of effective sample size.','\n')
+    } else {
+      cat('\nFor each parameter, n.eff is a crude measure of effective sample size,','\n')
+      cat('and Rhat is the potential scale reduction factor (at convergence, Rhat=1).','\n')
+    }
+  }
+  
+  #Print overlap0/f statistic info
+  if(!x$bugs.format){
   cat('\noverlap0 indicates if 0 falls within the 95% credible interval for the parameter.\n')
   cat('f represents the proportion of a parameter\'s posterior distribution with the same\n')
   cat('sign as the mean; i.e., our confidence that the parameter is positive or negative.\n')
-  
-  if(x$mcmc.info[[1]]>1){
-  if(max(unlist(x$Rhat))>1.1){cat('\n**WARNING** Rhat values indicate convergence failure.','\n')
-  }else{cat('\nSuccessful convergence based on Rhat values (all < 1.1).','\n')}
-  cat('Rhat is the potential scale reduction factor (at convergence, Rhat=1).','\n')
-  cat('For each parameter, n.eff is a crude measure of effective sample size.','\n')
   }
   
-  if(!is.null(x$DIC)){
-    
-    cat('\nDIC info: (pD = var(deviance)/2)','\npD =',round(x$pD,1),'and DIC =',round(x$DIC,digits),'\n')
-    cat('DIC is an estimate of expected predictive error (lower is better).\n')
-    
+  #Print DIC info
+  if(!is.null(x$DIC)){    
+    if(!x$bugs.format){
+      cat('\nDIC info: (pD = var(deviance)/2)','\npD =',round(x$pD,1),'and DIC =',round(x$DIC,digits),'\n')
+      cat('DIC is an estimate of expected predictive error (lower is better).\n')
+    } else {
+      cat('\nDIC info (using the rule, pD = var(deviance)/2)','\npD =',round(x$pD,1),'and DIC =',round(x$DIC,digits),'\n')
+      cat('DIC is an estimate of expected predictive error (lower deviance is better).\n')
+    }
   }
-  } else {print.simplebugs(x,digits=digits)}
+    
+    
 }
